# car_demo

./: CMakeLists.txt  README.md  package.xml
config/: gz_bridge.yaml  localization.yaml  nav2_params.yaml  nav2_params_3d.yaml  nav2_params_stvl_with_3d_lidar.yaml  nav2_params_stvl_with_camera.yaml  slam.yaml
description/: inertial_xacros.xacro  round_bot.sdf  round_bot.urdf.xacro  round_bot_with_depth_camera_and_3d_lidar.urdf.xacro
docker/: Dockerfile  run_image.sh
docs/: frames_2025-02-17_18.52.44.gv
launch/: bringup_launch.py  bringup_with_depth_camera_and_3d_lidar_launch.py  navigation_launch.py  navigation_with_stvl_launch.py  slam_launch.py  slam_with_depth_camera_and_3d_lidar_launch.py
maps/: edifice.pgm  edifice.yaml  office_floor.pgm  office_floor.yaml
rviz/: localization.rviz  navigation.rviz  navigation_stvl.rviz  slam.rviz  slam_with_depth_camera.rviz  visualize.rviz  visualize_with_depth_camera.rviz
src/: round_bot_simple_commander.py
worlds/: edifice.sdf  empty.sdf  ionic.sdf  office_floor_plan.world
